--- a/public/404.html
+++ b/public/404.html
@@ -4,21 +4,21 @@
 <head>
   <meta charset="utf-8"> <meta name="description" content="Deep learning with Amazon SageMaker Studio">
 <meta name="author" content="Shashank Prasanna">
- <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
-<link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+ <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+<link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
  
   <title>404 Page not found</title>
   
    
-    <link href="/css/nucleus.css?1617912335" rel="stylesheet">
+    <link href="./css/nucleus.css?1617917078" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <link href="/css/hybrid.css?1617912335" rel="stylesheet">
-    <link href="/css/featherlight.min.css?1617912335" rel="stylesheet">
-    <link href="/css/perfect-scrollbar.min.css?1617912335" rel="stylesheet">
-    <link href="/css/theme.css?1617912335" rel="stylesheet">
-    <link href="/css/hugo-theme.css?1617912335" rel="stylesheet">
+    <link href="./css/hybrid.css?1617917078" rel="stylesheet">
+    <link href="./css/featherlight.min.css?1617917078" rel="stylesheet">
+    <link href="./css/perfect-scrollbar.min.css?1617917078" rel="stylesheet">
+    <link href="./css/theme.css?1617917078" rel="stylesheet">
+    <link href="./css/hugo-theme.css?1617917078" rel="stylesheet">
     
-      <link href="/css/theme-mine.css?1617912335" rel="stylesheet">
+      <link href="./css/theme-mine.css?1617917078" rel="stylesheet">
     
 <style type="text/css">
     :root #header + #content > #left > #rlblock_left {
@@ -51,8 +51,8 @@
           </p>
           <p>Woops. Looks like this page doesn&#39;t exist ¯\_(ツ)_/¯.</p>
           <p></p>
-          <p><a href='/'>Go to homepage</a></p>
-          <p><img src='/images/gopher-404.jpg' style="width:50%"></img></p>
+          <p><a href='./'>Go to homepage</a></p>
+          <p><img src='./images/gopher-404.jpg' style="width:50%"></img></p>
         </div>
       </div>
 
